# Usb20DeviceController

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  flake.nix  yosys.patch
USBController/: Makefile  config.sv  io.pcf  runTestOften.sh  usb_rx_signals.gtkw  usb_tx_signals.gtkw
USBController/include/: config_pkg.sv  sie_defs_pkg.sv  usb_desc_pkg.sv  usb_dev_req_pkg.sv  usb_ep_pkg.sv  usb_packet_pkg.sv  util_macros.sv
USBController/patches/: sv2vFixesForVerilator.sim_patch  sv2vSynFixes.patch  sv2vSynFixes.syn_patch
USBController/sim_src/: find_crc_edge_bitstuffing_edge_case.cpp  sim_echo.cpp  sim_fifo_tb.cpp  sim_top.cpp  sim_trans_fifo_tb.cpp  sim_usb_rx.cpp  sim_usb_tx.cpp  sim_vcd_replay.cpp  usb_echo_signals.gtkw  usb_rx_signals.gtkw  usb_top_signals.gtkw  usb_tx_signals.gtkw
USBController/sim_src/common/: VerilatorTB.hpp  VerilatorTB.tpp  fifo_utils.hpp  print_utils.hpp  usb_descriptors.hpp  usb_packets.hpp  usb_transactions.hpp  usb_utils.hpp
USBController/sim_src/usb_rx/: usb_encoding_utils.hpp
USBController/src/: clock_gating.sv  clock_gen.sv  clock_mux.sv  crc.pl  sim_top.sv  top.sv  usb.sv  usb_dp.sv
USBController/src/example/: echo_endpoints.sv
USBController/src/pe/: ep0_rom.sv  usb_endpoint.sv  usb_endpoint_0.sv  usb_endpoint_arbiter.sv  usb_endpoint_in.sv  usb_endpoint_out.sv  usb_pe.sv  usb_pe_rom.sv
USBController/src/sie/: DPPL.sv  input_shift_reg.sv  nrzi_encoder.sv  output_shift_reg.sv  pid_check.sv  sie_common_defs.sv  usb_bit_stuffing_wrapper.sv  usb_crc.sv  usb_dp.sv  usb_sie.sv
USBController/src/sim/: sim_echo.sv  sim_fifo_tb.sv  sim_top.sv  sim_trans_fifo_tb.sv  (+5 more)
driver/: CMakeLists.txt
driver/src/: main.cpp
nix/: libsigrok.nix  libsigrokdecode.nix  pulseview.nix  verilator.nix  verilator_cpp17_20.patch
spinal_conversion/: Makefile  build.sbt
tools/: CMakeLists.txt  README.md
tools/annotation_reader/: CMakeLists.txt
tools/tla_to_vcd/: CMakeLists.txt
tools/vcd_annotation_masking/: CMakeLists.txt
tools/vcd_concat/: CMakeLists.txt
tools/vcd_real_thresholder/: CMakeLists.txt
tools/vcd_signal_merger/: CMakeLists.txt  Makefile
tools/vcd_time_to_clk/: CMakeLists.txt
tools/vcd_time_to_clk/src/: main.cpp
(+65 files in other folders)
